k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-frontend
  namespace: app
spec:
  replicas: 2
  selector: { matchLabels: { app: nginx-frontend } }
  template:
    metadata: { labels: { app: nginx-frontend } }
    spec:
      nodeSelector: { workload: frontend }
      tolerations:
        - key: "workload"
          value: "frontend"
          effect: NoSchedule
      containers:
        - name: nginx
          image: 857305036087.dkr.ecr.ap-northeast-2.amazonaws.com/ecr_nginx:v0.10
          ports: [ { containerPort: 80 } ]
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-frontend
  namespace: app
spec:
  selector: { app: nginx-frontend }
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
