k8s/tomcat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-backend
  namespace: app
spec:
  replicas: 2
  selector: { matchLabels: { app: tomcat-backend } }
  template:
    metadata: { labels: { app: tomcat-backend } }
    spec:
      # 노드 격리 쓰면 유지, 아니면 아래 두 줄 제거 가능
      nodeSelector: { workload: backend }
      containers:
        - name: tomcat
          image: 857305036087.dkr.ecr.ap-northeast-2.amazonaws.com/ecr_tomcat:v0.10
          ports: [ { containerPort: 8080 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-backend
  namespace: app
spec:
  selector: { app: tomcat-backend }
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
    - name: legacy-8080
      port: 8080
      targetPort: 8080
